# ros2_kuka

./: .gitignore  .gitmodules  README.md
src/: Ar_genertor.py  Ar_marker.py  Big_b.py  config.toml  fine_tune_hsv.py  stereo_calibrate.py  stereo_params.yml
src/camera/: package.xml  setup.py
src/camera/camera/: detection_node.py
src/camera/config/: config.toml  params_left.yaml  params_right.yaml
src/camera/launch/: camera.launch.py
src/kuka-rsi-io/: CMakeLists.txt  README.md  vcpkg-configuration.json
src/kuka-rsi-io/KRL/KR_C4/: README.md  ros_rsi.rsi.xml  ros_rsi_ethernet.xml
src/kuka-rsi-io/demo/: main.cpp
src/kuka-rsi-io/include/skrede/rsi/: kukarsiinterface.h  kukarsixmlserializer.h  spinlock.h
src/kuka-rsi-io/src/: kukarsiinterface.cpp  spinlock.cpp
src/kuka_bringup/: package.xml  setup.cfg  setup.py
src/kuka_bringup/config/: config.rviz
src/kuka_bringup/launch/: bringup.launch.py
src/kuka_control/: CMakeLists.txt  package.xml
src/kuka_control/config/: rviz_config.rviz
src/kuka_control/include/: ball_trajectory_prediction_node.hpp  kalman_filter.hpp
src/kuka_control/launch/: ball_trajectory_prediction.launch.py
src/kuka_control/src/: ball_trajectory_prediction_node.cpp  kalman_filter.cpp  test_ball_publisher_node.cpp
src/kuka_hardware/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/kuka_hardware/config/: fake_hardware_config_6_axis.yaml
src/kuka_hardware/launch/: launch.py
src/kuka_hardware/urdf/: kr6_r900_sixx.urdf.xacro  kr6_r900_sixx_macro.xacro  kr_agilus_ros2_control.xacro
src/kuka_moveit/: CMakeLists.txt  package.xml
src/kuka_moveit/config/: kinematics.yaml  moveit_controllers.yaml
src/kuka_moveit/include/kuka_moveit/: PlanExecutionNode.hpp  PointToLegalPoseNode.hpp  TrajectoryPlanningNode.hpp
src/kuka_moveit/launch/: moveit_planning.launch.py
src/kuka_moveit/src/: PlanExecutionNode.cpp  PointToLegalPoseNode.cpp  TrajectoryPlanningNode.cpp  plan_execution_node.cpp  point_to_legal_pose_node.cpp  trajectory_planning_node.cpp
src/kuka_rsi_io/: CMakeLists.txt  README.md  package.xml  vcpkg-configuration.json  vcpkg.json
src/kuka_rsi_io/KRL/KR_C4/: ros_rsi.rsi  ros_rsi.rsi.diagram  ros_rsi.rsi.xml  ros_rsi.src
src/kuka_rsi_io/KRL/KR_C4/old/: ros_rsi.src  ros_rsi_ethernet.xml
src/kuka_rsi_io/demo/: demo_node.cpp  main.cpp
src/kuka_rsi_io/include/: kuka_interface_plugin.hpp
src/kuka_rsi_io/include/rsi/: kukarsiinterface.h  kukarsixmlserializer.h  spinlock.h  udpserver.h
src/kuka_rsi_io/include/skrede/rsi/: udpserver.h
src/kuka_rsi_io/src/: kuka_interface_plugin.cpp  kukarsiinterface.cpp  kukarsixmlserializer.cpp  spinlock.cpp  udpserver.cpp
src/modbus_slave/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/modbus_slave/include/modbus_slave/: Slave.hpp
src/modbus_slave/modbus_slave/: modbus_slave_node.py
src/modbus_slave/src/: Slave.cpp  main.cpp
